# Alex

./: .gitignore  README
3D/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Font.cpp  Font.h  FrameSorter.cpp  FrameSorter.h  GeomUtil.cpp  GeomUtil.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  State.cpp  State.h  Texture.cpp  Texture.h  Threads.cpp  Threads.h  Timing.cpp  Timing.h
Base/: AVLTree.cpp  AVLTree.h  Array.h  Base.cpp  Base.h  Bits.cpp  Bits.h  Convex.cpp  Convex.h  Debug.cpp  Debug.h  Encode.cpp  Encode.h  File.cpp  File.h  Hash.cpp  Hash.h  HashInner.cpp  HashInner.h  List.h  Matrix.cpp  Matrix.h  Parse.cpp  Parse.h  RTTI.cpp  Random.cpp  Random.h  Rect.cpp  Shape.cpp  Shape.h  Str.cpp  Str.h  Util.h  Var.cpp  Var.h  VarUtil.cpp  VarUtil.h  Vector.cpp  Vector.h  WinFile.cpp
EveJew/: BlueprintMaterials.csv  Blueprints.csv  DecryptorAttributes.csv  EVEJew.lua  InventionMaterials.csv  Reactions.csv  ShipGroups.csv  (+2 more)
Misc/TryC/TryC/: CMakeLists.txt  TryC.c  hash.c  hash.h  vec.c  vec.h
alang/src/: CMakeLists.txt  alang.cpp  alang.h  analyze.cpp  analyze.h  ast2ir.cpp  ast2ir.h  common.cpp  common.h  compile.cpp  compile.h  core.cpp  core.h  dbg.cpp  dbg.h  definitions.cpp  definitions.h  defs.cpp  defs.h  error.cpp  error.h  func.cpp  func.h  ir.cpp  ir.h  module.cpp  module.h  parse.cpp  parse.h  rtti.cpp  rtti.h  token.cpp  token.h  types.cpp  types.h  utf8.cpp  utf8.h  var.cpp  var.h
gr/: CMakeLists.txt  IdeGrouping.cmake  gr.kdev4  grtest.cpp  stdafx.h
gr/.kdev4/: gr.kdev4
gr/data/: font.frag  font.vert  simple.frag  simple.vert
gr/gf/: CMakeLists.txt  camera.cpp  camera.h  framework.cpp  framework.h  material.cpp  material.h  model.cpp  model.h  renderable_component.cpp  renderable_component.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h
gr/gr/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_desc.cpp  buffer_desc.h  graphics.cpp  graphics.h  graphics_exception.cpp  graphics_exception.h  graphics_resource.cpp  graphics_resource.h  graphics_state.cpp  graphics_state.h  image.cpp  image.h  material.cpp  material.h  model.cpp  model.h  model_instance.cpp  model_instance.h  operation_queue.cpp  operation_queue.h  presentation_surface.cpp  presentation_surface.h  queue_operation.cpp  queue_operation.h  render_queue.cpp  render_queue.h  shader.cpp  shader.h
gr/gr/vk/: buffer_update_vk.cpp  buffer_update_vk.h  buffer_vk.cpp  buffer_vk.h  device_vk.cpp  device_vk.h  graphics_state_vk.cpp  graphics_state_vk.h  graphics_vk.cpp  graphics_vk.h  host_allocation_tracker_vk.cpp  host_allocation_tracker_vk.h  image_update_vk.cpp  image_update_vk.h  image_vk.cpp  image_vk.h  material_vk.cpp  material_vk.h  memory_vk.cpp  memory_vk.h  model_instance_vk.cpp  model_instance_vk.h  model_vk.cpp  model_vk.h  operation_queue_vk.cpp  operation_queue_vk.h  owned_by_queue_vk.cpp  owned_by_queue_vk.h  physical_device.h  physical_device_vk.cpp  physical_device_vk.h  presentation_surface_vk.cpp  presentation_surface_vk.h  queue_operation_vk.cpp  queue_operation_vk.h  queue_vk.cpp  queue_vk.h  render_queue_vk.cpp  render_queue_vk.h  shader_vk.cpp  (+4 more)
gr/gr/win32/: presentation_surface_create_data_win32.cpp  presentation_surface_create_data_win32.h
gr/gr1/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_desc.cpp  buffer_desc.h  definitions.cpp  definitions.h  device.cpp  device.h  execution_queue.cpp  execution_queue.h  graphics_exception.cpp  graphics_exception.h  host.cpp  host.h  image.cpp  image.h  output_pass.cpp  output_pass.h  presentation_surface.cpp  presentation_surface.h  render_commands.cpp  render_commands.h  render_pass.cpp  render_pass.h  render_pipeline.cpp  render_pipeline.h  render_state.cpp  render_state.h  resource.cpp  resource.h  rttr_factory.cpp  rttr_factory.h  sampler.cpp  sampler.h  shader.cpp  shader.h
gr/gr1/utl/: buffer_content.cpp  buffer_content.h  font.cpp  font.h  gltf.cpp  gltf.h  shader_param_data.cpp  shader_param_data.h
gr/gr1/vk/: buffer_copy_pass_vk.cpp  buffer_copy_pass_vk.h  buffer_transition_pass_vk.cpp  buffer_transition_pass_vk.h  buffer_vk.cpp  buffer_vk.h  descriptor_set_store.cpp  descriptor_set_store.h  device_vk.cpp  device_vk.h  execution_queue_vk.cpp  execution_queue_vk.h  final_pass_vk.cpp  final_pass_vk.h  host_allocation_tracker_vk.cpp  host_allocation_tracker_vk.h  image_buffer_copy_pass_vk.cpp  image_buffer_copy_pass_vk.h  image_transition_pass_vk.cpp  image_transition_pass_vk.h  image_vk.cpp  image_vk.h  output_pass_vk.cpp  output_pass_vk.h  pipeline_store.cpp  pipeline_store.h  present_pass_vk.cpp  present_pass_vk.h  presentation_surface_vk.cpp  presentation_surface_vk.h  queue_vk.cpp  queue_vk.h  render_commands_vk.cpp  render_commands_vk.h  render_pass_vk.cpp  render_pass_vk.h  render_pipeline_transition_pass_vk.cpp  render_pipeline_transition_pass_vk.h  render_pipeline_vk.cpp  render_pipeline_vk.h  (+9 more)
gr/gr1/win32/: presentation_surface_create_data_win32.cpp  presentation_surface_create_data_win32.h
gr/gr1/x11/: presentation_surface_create_data_xlib.cpp  presentation_surface_create_data_xlib.h
gr/platform/: CMakeLists.txt  input.cpp  input.h  platform.cpp  platform.h  resource.cpp  resource.h  window.cpp  window.h
gr/platform/win32/: platform_win32.cpp  platform_win32.h  window_win32.cpp  window_win32.h
gr/util/: CMakeLists.txt  box_tree.cpp  box_tree.h  dbg.cpp  dbg.h  enumutl.cpp  enumutl.h  file.cpp  file.h  geom.cpp  geom.h  geom_primitive.cpp  geom_primitive.h  layout.cpp  layout.h  mathutl.cpp  mathutl.h  mem.cpp  mem.h  multithread.cpp  multithread.h  namespace.h  polytope.cpp  polytope.h  rect.cpp  rect.h  rtti.cpp  rtti.h  str.cpp  str.h  time.h  type_factory.cpp  type_factory.h  type_layout.cpp  type_layout.h  utl.cpp  utl.h
rust/hello/: .gitignore  Cargo.toml
rust/hello/data/: an225.glb  an225.gltf
rust/hello/src/: app.rs  cam.rs  font.rs  fullscreen.frag  fullscreen.vert  gen.comp  gen.rs  geom.rs  main.rs  model.rs  scene.rs  solid.frag  solid.rs  solid.vert
rust/ray/: Cargo.toml
rust/ray/src/: geom.rs  main.rs  scene.rs
(+540 files in other folders)
