[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
glam = "0.24.1"
tobj = "4.0.0"
vulkano = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-shaders = {git = "https://github.com/vulkano-rs/vulkano"}
winit = "0.28.6"
