[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
bytemuck = "1.13.1"
glam = { version = "0.24.1", features = ["bytemuck"] }
image = "0.24.7"
tobj = "4.0.0"
vulkano = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-shaders = {git = "https://github.com/vulkano-rs/vulkano"}
winit = {version = "0.28.6", default-features = false, features = ["x11"] }
winit_input_helper = "0.14.1"
